# ai-hyperscaler-on-workstation

./: .clauderc  .cursorignore  .cz.toml  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AI-AGENT-GUIDE.md  CLAUDE.md  CMakeLists.txt  Makefile  Makefile.vars  OPEN_SOURCE_PLAN.md  README.md  kind-config.yaml  mkdocs.yml
.claude/: settings.json
.cursor/: README.md  agent-allow-reference.yaml
ansible/: .ansible-lint  .gitignore  .packerignore  Makefile  README-packer-ansible.md  README.md  ansible.cfg  requirements.txt  run-ansible-hpc-cloud.sh  run-packer-ansible.sh  test-hpc-role.sh
config/: README.md  example-multi-gpu-clusters.yaml  template-cluster.yaml  test-cloud-cpu-cluster.yaml
containers/: CMakeLists.txt  README.md  requirements.txt
docker/: Dockerfile  README.md  development-workflow.md  entrypoint.sh  requirements.txt
docs/: APPTAINER-CONVERSION-WORKFLOW.md  CLUSTER-DEPLOYMENT-WORKFLOW.md  DASHBOARD_ACCESS.md  DOCUMENTATION-STRUCTURE.md  GPU-GRES-WORKFLOW.md  PLACEHOLDER-CREATION-SUMMARY.md  STRUCTURE-VERIFICATION.md  VIRTIO-FS-INTEGRATION.md  beegfs-installation-flow.md  cursor-agent-setup.md  gitops-quick-start.md  gitops-workflow.md  gpu-configuration-guide.md  kubeconfig-management.md  storage-configuration.md
examples/: CMakeLists.txt
examples/slurm-jobs/: CMakeLists.txt  README.md
examples/slurm-jobs/hello-world/: CMakeLists.txt  compile.sh  hello.c  hello.sbatch
examples/slurm-jobs/matrix-multiply/: CMakeLists.txt  compile.sh  matrix-mult.c  matrix.sbatch
examples/slurm-jobs/mnist-ddp/: CMakeLists.txt  mnist-ddp.sbatch  mnist_ddp.py
examples/slurm-jobs/monitoring/: aim-server.sbatch  mlflow-server.sbatch  tensorboard-server.sbatch
examples/slurm-jobs/monitoring/scripts/: start-aim.sh  start-mlflow.sh  start-tensorboard.sh
examples/slurm-jobs/oumi/: oumi-template.yaml  oumi-training-apptainer.sh  test-oumi-container.sh  test-oumi-installation.sh
examples/slurm-jobs/pi-calculation/: CMakeLists.txt  compile.sh  pi-monte-carlo.c  pi.sbatch
examples/slurm-jobs/templates/: pytorch_ddp_apptainer.sh  pytorch_ddp_template.py
k8s-manifests/: Makefile  README.md
packer/: CMakeLists.txt  README.md
packer/cloud-base/: CMakeLists.txt  README.md  cloud-base.pkr.hcl  setup-cloud-base.sh
packer/cloud-base/http/: preseed.cfg
packer/cloud-gpu-worker/: CMakeLists.txt  README.md  cloud-gpu-worker.pkr.hcl  setup-gpu-worker.sh
packer/common/cloud-init/: cloud-base-meta-data.yml  cloud-base-user-data.yml  cloud-gpu-worker-meta-data.yml  cloud-gpu-worker-user-data.yml  hpc-base-meta-data.yml  hpc-base-user-data.yml  hpc-compute-meta-data.yml  hpc-compute-user-data.yml  hpc-controller-meta-data.yml  hpc-controller-user-data.yml
packer/common/scripts/: generate-ssh-keys-only.sh  generate-ssh-keys.sh  prepare-cloud-init.sh
packer/hpc-base/: CMakeLists.txt  README.md  debug-build.sh  hpc-base.pkr.hcl  setup-hpc-base.sh
packer/hpc-compute/: CMakeLists.txt  README.md  hpc-compute.pkr.hcl  setup-hpc-compute.sh
packer/hpc-controller/: CMakeLists.txt  README.md  hpc-controller.pkr.hcl  setup-hpc-controller.sh
python/ai_how/: .pre-commit-config.yaml  README.md  mkdocs.yml  noxfile.py  pyproject.toml
python/ai_how/ai_how/: cli.py
python/ai_how/docs/: cli-reference.md  common-concepts.md  development.md  examples.md  index.md  network_configuration.md  pcie-passthrough-validation.md  schema-guide.md  state-management.md
python/ai_how/docs/api/: ai_how.md
python/ai_how/examples/: schema_usage.py  test-pcie-config.yaml
python/ai_how/src/ai_how/: cli.py  system_manager.py  validation.py
python/ai_how/src/ai_how/config/: __init__.py  processor.py
python/ai_how/src/ai_how/inventory/: __init__.py  base.py  formatters.py  hpc.py  kubernetes.py
python/ai_how/src/ai_how/pcie_validation/: __init__.py  pcie_passthrough.py
python/ai_how/src/ai_how/resource_management/: __init__.py  gpu_allocator.py  shared_gpu_validator.py
python/ai_how/src/ai_how/schemas/: README.md  __init__.py  cluster.py  cluster.schema.json
python/ai_how/src/ai_how/state/: __init__.py  cluster_state.py  manager.py  models.py  persistence.py
python/ai_how/src/ai_how/utils/: __init__.py  config_parser.py  gpu_utils.py  logging.py  path_utils.py  virsh_utils.py  vm_config_utils.py  vm_utils.py
python/ai_how/src/ai_how/validators/: __init__.py  shared_gpu_validator.py
python/ai_how/src/ai_how/vm_management/: __init__.py  cloud_manager.py  gpu_mapper.py  hpc_manager.py  libvirt_client.py  network_manager.py  vm_factory.py  vm_lifecycle.py  volume_manager.py  xml_tracer.py
python/ai_how/src/ai_how/vm_management/templates/: cluster_network.xml.j2  compute_node.xml.j2  controller.xml.j2
python/ai_how/stubs/: libvirt.pyi
python/ai_how/tests/: test_cli.py  test_cloud_manager.py  test_config_parser.py  test_gpu_utils.py  test_hpc_manager_paths.py  test_inventory_base.py  test_inventory_formatters.py  test_inventory_hpc.py  test_inventory_kubernetes.py  test_optional_clusters.py  test_path_utils.py  test_pcie_passthrough.py  test_resource_management.py  test_schema_image_paths.py  test_shared_gpu_validator.py  test_template_fixes.py  test_template_rendering.py  test_validation.py  test_vm_config_utils.py  test_vm_factory.py  test_vm_lifecycle_gpu.py
scripts/: README.md  cleanup_all.sh  generate-ansible-inventory.py  generate-kubespray-inventory.py  generate-munge-key.sh  manage-kubeconfig.sh  manage-monitoring-servers.sh  run-in-dev-container.sh  run_all_tests.sh  setup-commitizen.sh  setup-host-dependencies.sh  setup-monitoring-env.sh  start-gpu-passthrough-vm.sh  verify-k8s-hpc.sh
tests/: .gitignore  Makefile  README.md  clean-cluster-ssh-keys.sh  run_base_images_test.sh  setup-test-environment.sh  test-ai-how-api-integration.sh  test-ansible-hpc-integration.sh  test-beegfs-framework.sh  test-cgroup-isolation-framework.sh  test-container-integration-framework.sh  test-container-registry-framework.sh  test-container-runtime-framework.sh  test-dcgm-monitoring-framework.sh  test-gpu-gres-framework.sh  test-grafana-framework.sh  test-job-scripts-framework.sh  (+11 more)
(+759 files in other folders)
